--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -23,12 +23,14 @@
   <script>
     window.onload = () => {
       const menuToggle = document.getElementById('menuTopToggle');
-      menuToggle.addEventListener('click', () => {
-        const cartButton = document.getElementById('cartButton');
-        const wrapper = document.getElementById('wrapper');
-        wrapper.classList.toggle('toggled');
-        cartButton.classList.toggle('cart-toggled');
-      });
+      if (menuToggle) {
+        menuToggle.addEventListener('click', () => {
+          const cartButton = document.getElementById('cartButton');
+          const wrapper = document.getElementById('wrapper');
+          wrapper.classList.toggle('toggled');
+          cartButton.classList.toggle('cart-toggled');
+        });
+      }
     }
   </script>
 </body>
